--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sayı Toplama</title>
     <style>
         /* Sayılar için stil */
-        #numberList span {
+        #SayiList span {
             display: inline-block;
             margin: 5px;
             padding: 5px 10px;
@@ -18,14 +18,14 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Hafif gölge efekti */
         }
 
-        #numberList span:hover {
+        #SayiList span:hover {
             background-color: lightgreen; /* Hover durumunda yeşil arka plan */
             color: darkgreen; /* Hover durumunda yazı rengi */
         }
 
         /* Butonlar için stil */
         button {
-            background-color: #4CAF50; /* Buton arka plan rengi */
+            background-color: #4CAF50; /* Ekle butonunun arka plan rengi (yeşil) */
             color: white; /* Yazı rengi */
             border: none;
             padding: 10px 20px;
@@ -38,6 +38,25 @@
         button:hover {
             background-color: #45a049; /* Hover durumunda buton rengi */
         }
+
+      /* Güncelle ve Bitir Butonları Açık Mavi */
+.btn-update, .btn-finish {
+    background-color: #87CEFA; /* Açık Mavi */
+    color: black;
+}
+
+/* Güncelle Butonunu Sarı Yap */
+.btn-update {
+    background-color: yellow; /* Sarı */
+    color: black;
+}
+
+/* Sil Butonu Kırmızı */
+.btn-delete {
+    background-color: red;
+    color: white;
+}
+
 
         /* Input text box için stil */
         #numberInput {
@@ -72,34 +91,25 @@
             border-radius: 5px; /* Köşeleri yuvarlatmak */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Gölgeleme efekti */
         }
-
-        .context-menu button {
-            background: #ff6347; /* Kırmızımsı turuncu buton rengi */
-            color: white;
-            border: none;
-            padding: 8px;
-            cursor: pointer;
-            display: block;
-            margin-bottom: 5px;
-            border-radius: 3px; /* Buton köşeleri yuvarlatılmış */
-            transition: background-color 0.3s ease; /* Buton geçiş efekti */
-        }
-
         .context-menu button:hover {
             background: #ff4500; /* Hover durumunda buton rengi */
+        }
+        /* Div kopyalanamaz */
+        #SayiList {
+            user-select: none; /* Kopyalanmasını engeller */
         }
     </style>
 </head>
 <body>
     <h2>Sayıları Topla</h2>
     <input type="number" id="numberInput" placeholder="Sayı gir" />
-    <button onclick="addNumber()">Ekle</button>
-    <button onclick="finish()">Bitir</button>
-    <div id="numberList"></div>
+    <button onclick="addNumber()" class="btn-add">Ekle</button>
+    <button onclick="finish()" class="btn-finish">Topla</button>
+    <div id="SayiList"></div>
     <p id="result"></p>
     <div id="contextMenu" class="context-menu">
-        <button onclick="updateSelectedNumber()">Güncelle</button>
-        <button onclick="deleteSelectedNumber()">Sil</button>
+        <button onclick="updateSelectedNumber()" class="btn-update">Güncelle</button>
+        <button onclick="deleteSelectedNumber()" class="btn-delete">Sil</button>
     </div>
 
     <script>
@@ -128,11 +138,12 @@
         }
 
         function updateNumberList() {
-            let listElement = document.getElementById("numberList");
+            i = 1;
+            let listElement = document.getElementById("SayiList");
             listElement.innerHTML = "";
             numbers.forEach((num, index) => {
                 let span = document.createElement("span");
-                span.innerText = num;
+                span.innerText = i+++".  "+ num;
                 
                 span.oncontextmenu = function(event) {
                     event.preventDefault();
@@ -165,13 +176,17 @@
         }
 
         function deleteSelectedNumber() {
-            if (selectedIndex !== null) {
-                toplam -= numbers[selectedIndex];
-                numbers.splice(selectedIndex, 1);
-                updateNumberList();
-                contextMenu.style.display = "none";
-            }
+    if (selectedIndex !== null) {
+        let confirmDelete = confirm("Bu sayıyı silmek istediğinize emin misiniz?");
+        if (confirmDelete) {
+            toplam -= numbers[selectedIndex];
+            numbers.splice(selectedIndex, 1);
+            updateNumberList();
         }
+        contextMenu.style.display = "none";
+    }
+}
+
 
         document.addEventListener("click", function() {
             contextMenu.style.display = "none";
@@ -189,5 +204,3 @@
     </script>
 </body>
 </html>
-
-
