--- a/index.html
+++ b/index.html
@@ -234,6 +234,19 @@
         "Talha Durmaz\n Talha_Drz";
 
     }
+    
+    document.addEventListener('touchstart', function(event) {
+    if (event.touches.length > 1) { 
+        event.preventDefault();
+    }
+}, { passive: false });
+
+document.addEventListener('touchmove', function(event) {
+    if (window.scrollY === 0 && event.touches.length === 1) { 
+        event.preventDefault();
+    }
+}, { passive: false });
+
     </script>
 </body>
 </html>
