--- a/index.html
+++ b/index.html
@@ -235,17 +235,22 @@
 
     }
     
-    document.addEventListener('touchstart', function(event) {
-    if (event.touches.length > 1) { 
-        event.preventDefault();
+let startY = 0;
+
+document.addEventListener("touchstart", function (event) {
+    if (window.scrollY === 0) {
+        startY = event.touches[0].clientY; // Parmağın ilk dokunduğu noktayı al
     }
 }, { passive: false });
 
-document.addEventListener('touchmove', function(event) {
-    if (window.scrollY === 0 && event.touches.length === 1) { 
-        event.preventDefault();
+document.addEventListener("touchmove", function (event) {
+    let currentY = event.touches[0].clientY;
+
+    if (window.scrollY === 0 && currentY > startY) {
+        event.preventDefault(); // Yukarıdan aşağı çekme hareketini engelle
     }
 }, { passive: false });
+
 
     </script>
 </body>
